# FarmOS

./: .bkit-memory.json  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CODERABBIT_GUIDELINES.md  README.md  RULES.md  bootstrap.cmd  bootstrap.py  branch-changes-summary.md  reset-db.cmd  start-all.bat
.githooks/: pre-push
DH11_KY018_WiFi/: DH11_KY018_WiFi.ino
automation/: run.mjs
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  diagnosis.py  health.py  irrigation.py  journal.py  pesticide.py  review_analysis.py  sensors.py  subsidy.py
backend/app/core/: config.py  database.py  deps.py  exif_utils.py  journal_parser.py  journal_pdf.py  journal_store.py  journal_vision_parser.py  llm_client_base.py  pesticide_autoseed.py  pesticide_candidates.py  pesticide_crawl_service.py  pesticide_matcher.py  photo_storage.py  review_analyzer.py  review_helpers.py  review_rag.py  review_report.py  review_singletons.py  security.py  sensor_filter.py  store.py  stt.py  user_store.py
backend/app/mcp/: __init__.py  auth.py  schemas.py  server.py  tools.py
backend/app/models/: __init__.py  diagnosis.py  journal.py  ncpms.py  pesticide.py  subsidy.py  user.py
backend/app/schemas/: __init__.py  auth.py  journal.py  review_analysis.py  sensor.py  subsidy.py
backend/app/services/: ai_agent_bridge.py  diagnosis_agent.py
backend/app/services/subsidy/: __init__.py  chunker.py  gov_rag.py  matcher.py  pdf_ingest.py  prompts.py  seed_data.py  tools.py
backend/data/gov/: 2026_공익직불_시행지침.md
backend/data/pesticide/: VERSION.txt
bootstrap/: apply_shop_updates.py  (+10 more)
shopping_mall/backend/: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
shopping_mall/backend/ai/: README.md  __init__.py  embeddings.py  llm_client.py  rag.py  seed_rag.py  utils.py
shopping_mall/backend/ai/agent/: README.md  __init__.py  cs_tools.py  executor.py  holiday.py  llm.py  prompts.py  responses.py  tone_policy.py  tools.py
shopping_mall/backend/ai/agent/clients/: README.md  __init__.py  base.py  claude.py  openai.py
shopping_mall/backend/ai/agent/faq_writer/: README.md  __init__.py  agent.py  prompts.py  tools.py
shopping_mall/backend/ai/agent/order_graph/: README.md  __init__.py  graph.py  nodes.py  prompts.py  state.py
shopping_mall/backend/ai/agent/subagents/cs/: README.md  prompts.py  tools.py
shopping_mall/backend/ai/agent/supervisor/: README.md  __init__.py  executor.py  prompts.py  tools.py
shopping_mall/backend/ai/data/: .migration_v2_complete  bm25_index.json  faq.json  farm_info.json  policy_faq.json  product_faq.json  season_info.json  storage_guide.json
shopping_mall/backend/ai/prompts/: chatbot.py  classifier.py  report.py
shopping_mall/backend/app/: database.py  farmos_auth.py  main.py  paths.py
shopping_mall/backend/app/core/: README.md  config.py  datetime_utils.py
shopping_mall/backend/app/crud/: category.py  order.py  product.py  review.py
shopping_mall/backend/app/models/: __init__.py  cart.py  category.py  chat_log.py  chat_session.py  customer_segment.py  exchange_request.py  expense.py  faq_category.py  faq_citation.py  faq_doc.py  harvest.py  order.py  product.py  revenue.py  review.py  shipment.py  store.py  ticket.py  user.py  weekly_report.py  wishlist.py
shopping_mall/backend/app/routers/: admin.py  analytics.py  calendar.py  cart.py  categories.py  chatbot.py  faq.py  faq_categories.py  faq_docs.py  orders.py  products.py  reports.py  reviews.py  shipments.py  stores.py  users.py  wishlists.py
shopping_mall/backend/app/schemas/: cart.py  category.py  chat_session.py  chatlog.py  expense.py  harvest.py  order.py  product.py  report.py  revenue.py  review.py  segment.py  shipment.py  store.py  user.py
shopping_mall/backend/app/services/: README.md  agent_chatbot.py  ai_chatbot.py  ai_classifier.py  ai_report.py  demand_forecaster.py  faq_gap_analyzer.py  faq_sync.py  multi_agent_chatbot.py  order_processor.py  revenue_sync.py  rfm_analyzer.py  shipping_tracker.py
shopping_mall/backend/db/: README.md  seed.py  seed_backoffice.py
shopping_mall/backend/jobs/: README.md  check_shipments.py  generate_report.py  scheduler.py  update_segments.py
shopping_mall/backend/scripts/: README.md  evaluate_rag.py  measure_latency.py  migrate_json_to_faq_v2.py  migrate_knowledge_to_db.py  migrate_order_status.py  seed_and_verify.py
shopping_mall/backend/tests/: README.md  conftest.py  test_admin_ticket_flags.py  test_faq_management.py
shopping_mall/backend/tests/agent/: test_chatbot_service.py  test_executor.py  test_order_graph.py
shopping_mall/backend/tests/eval/: conftest.py  eval_dataset.json  test_cs_response_quality.py  test_edge_cases_llm.py  test_rag_precision.py  test_routing_accuracy.py  test_single_vs_multi_agent.py
(+253 files in other folders)
