[project]
name = "farmos-backend"
version = "0.1.0"
description = "FarmOS 2.0 Backend API — IoT sensor data, irrigation control, and farm management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "chromadb>=1.5.5",
    "fastapi>=0.135.2",
    "fpdf2>=2.8.0",
    "httpx>=0.28.0",
    "langchain-core>=1.2.27",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "rapidfuzz>=3.10.0",
    "ruff>=0.6.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "sse-starlette>=3.3.4",
    "uvicorn[standard]>=0.42.0",
]

[tool.uv]
exclude-newer = "7 days"
